// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli > should build \`browser-bundle\` package > ./dist/browser.cjs 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: !0 });
const runtime = "browser";
exports.runtime = runtime;
//# sourceMappingURL=browser.cjs.map
"
`;


exports[`cli > should build \`browser-bundle\` package > ./dist/browser.js 1`] = `
"const runtime = "browser";
export {
  runtime
};
//# sourceMappingURL=browser.js.map
"
`;


exports[`cli > should build \`custom-dist\` package > ./lib/index.cjs 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: !0 });
const VERSION = "1.0.0";
exports.VERSION = VERSION;
//# sourceMappingURL=index.cjs.map
"
`;


exports[`cli > should build \`custom-dist\` package > ./lib/index.d.ts 1`] = `
"/** @public */
export declare const VERSION = '1.0.0'

export {}
"
`;


exports[`cli > should build \`custom-dist\` package > ./lib/index.js 1`] = `
"const VERSION = "1.0.0";
export {
  VERSION
};
//# sourceMappingURL=index.js.map
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/extra.browser.js 1`] = `
"const format = "esm", runtime = "browser", path = "dist/extra.browser.js";
export {
  format,
  path,
  runtime
};
//# sourceMappingURL=extra.browser.js.map
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/extra.cjs 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: !0 });
const format = "commonjs", runtime = "*", path = "dist/extra.cjs";
exports.format = format;
exports.path = path;
exports.runtime = runtime;
//# sourceMappingURL=extra.cjs.map
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/extra.d.ts 1`] = `
"/** @public */
export declare const format: string

/** @public */
export declare const path: string

/** @public */
export declare const runtime: string

export {}
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/extra.js 1`] = `
"const format = "esm", runtime = "*", path = "dist/extra.js";
export {
  format,
  path,
  runtime
};
//# sourceMappingURL=extra.js.map
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/index.browser.js 1`] = `
"const format = "esm", runtime = "browser", path = "dist/index.browser.js";
export {
  format,
  path,
  runtime
};
//# sourceMappingURL=index.browser.js.map
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/index.cjs 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: !0 });
const format = "commonjs", runtime = "*", path = "dist/index.cjs";
exports.format = format;
exports.path = path;
exports.runtime = runtime;
//# sourceMappingURL=index.cjs.map
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/index.d.ts 1`] = `
"/** @public */
export declare const format: string

/** @public */
export declare const path: string

/** @public */
export declare const runtime: string

export {}
"
`;


exports[`cli > should build \`dummy-module\` package > ./dist/index.js 1`] = `
"const format = "esm", runtime = "*", path = "dist/index.js";
export {
  format,
  path,
  runtime
};
//# sourceMappingURL=index.js.map
"
`;


exports[`cli > should build \`multi-export\` package > ./dist/index.cjs 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: !0 });
function defineConfig(options) {
  return options;
}
function definePlugin(plugin) {
  return plugin;
}
exports.defineConfig = defineConfig;
exports.definePlugin = definePlugin;
//# sourceMappingURL=index.cjs.map
"
`;


exports[`cli > should build \`multi-export\` package > ./dist/index.d.ts 1`] = `
"/** @public */
export declare interface Config extends Plugin_2 {
  plugins?: Plugin_2[]
}

/** @public */
export declare function defineConfig(options: Config): Config

/** @public */
export declare function definePlugin(plugin: Plugin_2): Plugin_2

/** @public */
declare interface Plugin_2 {
  name: string
  options?: PluginOptions
}
export {Plugin_2 as Plugin}

declare interface PluginOptions {
  /**
   * @defaultValue true
   */
  enabled?: boolean
}

export {}
"
`;


exports[`cli > should build \`multi-export\` package > ./dist/index.js 1`] = `
"function defineConfig(options) {
  return options;
}
function definePlugin(plugin) {
  return plugin;
}
export {
  defineConfig,
  definePlugin
};
//# sourceMappingURL=index.js.map
"
`;


exports[`cli > should build \`multi-export\` package > ./dist/plugin.cjs 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: !0 });
var multiExport = require("multi-export");
function plugin() {
  return multiExport.definePlugin({
    name: "plugin"
  });
}
exports.plugin = plugin;
//# sourceMappingURL=plugin.cjs.map
"
`;


exports[`cli > should build \`multi-export\` package > ./dist/plugin.d.ts 1`] = `
"/** @public */
export declare function plugin(): Plugin_2

/** @public */
declare interface Plugin_2 {
  name: string
  options?: PluginOptions
}

declare interface PluginOptions {
  /**
   * @defaultValue true
   */
  enabled?: boolean
}

export {}
"
`;


exports[`cli > should build \`multi-export\` package > ./dist/plugin.js 1`] = `
"import { definePlugin } from "multi-export";
function plugin() {
  return definePlugin({
    name: "plugin"
  });
}
export {
  plugin
};
//# sourceMappingURL=plugin.js.map
"
`;


